# dev-stats

./: .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/: action.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
docs/: api_reference.md  architecture.md  ci_integration.md  dashboard_guide.md  user_manual.md
planning/phases/: phase_01.md  phase_02.md  phase_03.md  phase_04.md  phase_05.md  phase_06.md  phase_07.md  phase_08.md  phase_09.md
planning/sprints/: sprint_01.md  sprint_02.md  sprint_03.md  sprint_04.md  sprint_05.md  sprint_06.md  sprint_07.md  sprint_08.md  sprint_09.md  sprint_10.md  sprint_11.md  sprint_12.md  sprint_13.md  sprint_14.md  sprint_15.md  sprint_16.md  sprint_17.md  sprint_18.md  sprint_19.md  sprint_20.md  sprint_21.md  sprint_22.md  sprint_23.md
planning/tasks/: tasks_01.md  tasks_02.md  tasks_03.md  tasks_04.md  tasks_05.md  tasks_06.md  tasks_07.md  tasks_08.md  tasks_09.md  tasks_10.md  tasks_11.md  tasks_12.md  tasks_13.md  tasks_14.md  tasks_15.md  tasks_16.md  tasks_17.md  tasks_18.md  tasks_19.md  tasks_20.md  tasks_21.md  tasks_22.md  tasks_23.md
src/dev_stats/: __init__.py  __main__.py
src/dev_stats/ci/: abstract_ci_adapter.py  github_actions_adapter.py  gitlab_adapter.py  jenkins_adapter.py  precommit_generator.py  teamcity_adapter.py  violation.py
src/dev_stats/cli/: __init__.py  analyse_command.py  app.py  branches_command.py  gitlog_command.py  init_hooks_command.py  version_callback.py  watch_runner.py
src/dev_stats/config/: __init__.py  analysis_config.py  branch_config.py  config_loader.py  defaults.toml  gitlog_config.py  output_config.py  threshold_config.py
src/dev_stats/core/: __init__.py  aggregator.py  dispatcher.py  models.py  parser_registry.py  scanner.py
src/dev_stats/core/git/: activity_scorer.py  blame_engine.py  branch_analyzer.py  commit_enricher.py  contributor_analyzer.py  diff_engine.py  log_harvester.py  merge_detector.py  pattern_detector.py  ref_explorer.py  remote_sync.py  timeline_builder.py  tree_walker.py
src/dev_stats/core/metrics/: churn_scorer.py  complexity_calculator.py  coupling_analyser.py  duplication_detector.py  test_coverage_reader.py
src/dev_stats/output/: __init__.py  sort_schema.py
tests/: conftest.py
tests/integration/: test_adversarial_content.py  test_cli.py  test_e2e_analyse.py  test_e2e_ci.py  test_e2e_edge_cases.py  test_e2e_exports.py  test_e2e_git_analysis.py  test_performance.py
tests/unit/: test_config.py
tests/unit/ci/: test_abstract_ci_adapter.py  test_github_actions_adapter.py  test_gitlab_adapter.py  test_jenkins_adapter.py  test_precommit_generator.py  test_teamcity_adapter.py
tests/unit/cli/: test_analyse_command.py  test_branches_command.py  test_error_handling.py  test_sort_flag.py  test_watch_runner.py
tests/unit/core/: test_aggregator.py  test_models.py  test_parser_registry.py  test_scanner.py
tests/unit/output/: test_asset_embedder.py  test_badge_generator.py  test_csv_exporter.py  test_dashboard_builder.py  test_dashboard_performance.py  test_data_compressor.py  test_json_exporter.py  test_sort_schema.py  test_xml_exporter.py
(+74 files in other folders)
